--- a/src/sudoku/utils.scss
+++ b/src/sudoku/utils.scss
@@ -14,3 +14,8 @@
       border-color: var(--cta-primary-border);
   }
 }
+
+%bottomNavSpacing {
+  margin-bottom: .5rem;
+  padding-bottom: .2rem;
+}
